OpenJMLTest/test/gitbug445a/expected
test/gitbug445a/Pair.java:5: error: Implicit references to 'this' are not permitted in constructor assignable clauses: first
    /*@ assignable first, second;
                   ^
test/gitbug445a/Pair.java:5: error: Implicit references to 'this' are not permitted in constructor assignable clauses: second
    /*@ assignable first, second;
                          ^
test/gitbug445a/Pair.java:19: error: A \result expression may not be in a model_program clause
      @ { \result.add(0,p.run(first));
           ^
test/gitbug445a/Pair.java:20: error: A \result expression may not be in a model_program clause
      @   \result.add(1,p.run(second));
           ^
test/gitbug445a/Pair.java:21: error: cannot find symbol
      @   return res;
                 ^
  symbol:   variable res
  location: class Pair<T>
  where T is a type-variable:
    T extends Object declared in class Pair
Operation not performed because of parse or type errors
5 errors
